--- a/src/components/calendar/calendar.module.css
+++ b/src/components/calendar/calendar.module.css
@@ -4,7 +4,7 @@
   border-top-right-radius: 20px;
   border-bottom-left-radius: 20px;
   border-bottom-right-radius: 20px;
-  padding: 64px 0;
+  padding: 64px 16px;
 }
 
 .sectionContainer {
