--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -7,6 +7,7 @@
   font-size: 14px;
   color: var(--softColor);
   height: 120px;
+  padding: 0 16px;
 }
 
 .infos {
@@ -24,7 +25,7 @@ ul {
 }
 
 .footer-credits {
-  width: var(--containerSize);
+  width: calc(var(--containerSize) - 32px);
   margin-top: 50px;
   display: flex;
   justify-content: space-between;
