--- a/src/components/hero/hero.module.css
+++ b/src/components/hero/hero.module.css
@@ -7,10 +7,10 @@
   align-items: center;
   justify-content: center;
   margin-top: 100px;
+  padding: 0 16px;
 }
 
 .hero {
-  width: var(--containerSize);
   display: flex;
 }
 
@@ -113,4 +113,32 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+@media screen and (max-width: 1280px) {
+  .title {
+    font-size: 72px;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .title {
+    font-size: 64px;
+  }
+
+  .imgContainer {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .title {
+    font-size: 48px;
+  }
+}
+
+@media screen and (max-width: 640px) {
+  .title {
+    font-size: 36px;
+  }
 }
