--- a/src/components/infos/infox.module.css
+++ b/src/components/infos/infox.module.css
@@ -4,7 +4,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 64px 0;
+  padding: 64px 16px;
 }
 
 .infosItem {
