--- a/src/components/jury/jury.module.css
+++ b/src/components/jury/jury.module.css
@@ -1,5 +1,5 @@
 .jury {
-  padding: 64px 0;
+  padding: 64px 16px;
 }
 
 .juryMembers {
