--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -1,16 +1,16 @@
 .container {
   width: 100%;
   height: 100px;
-
   position: fixed;
   top: 0;
   left: 0;
   z-index: 99;
   background-color: var(--bg);
+  padding: 0 16px;
 }
 
 .navbar {
-  width: var(--containerSize);
+  width: calc(var(--containerSize) - 32px);
   height: 100%;
   display: flex;
   align-items: center;
