--- a/src/components/sponsor/sponsor.module.css
+++ b/src/components/sponsor/sponsor.module.css
@@ -1,5 +1,5 @@
 .container {
-  padding: 64px 0;
+  padding: 64px 16px;
 }
 .title {
   color: var(--templateColor);
