--- a/src/components/tiny/tiny.module.css
+++ b/src/components/tiny/tiny.module.css
@@ -7,6 +7,7 @@
   color: var(--templateColor);
   font-size: var(--PageTitleSize);
   margin-bottom: 50px;
+  padding: 0 16px;
 }
 
 iframe {
